Thêm dữ liệu xem điểmđiểm

--- a/kt/tin.html
+++ b/kt/tin.html
@@ -38,6 +38,8 @@ script: |
   <h2 class="text-center">Links kiểm tra hệ số 1 các lớp của thầy Hoàn Chân</h2>
   <p class="text-center py-2">Các em xem mã số học sinh của mình trên thẻ HS hoặc ở đây nhé:</p>
   <p class="text-center pb-2"> <a class="btn btn-danger" href="https://drive.google.com/file/d/19pAdYylCUXnQkhtwvbKG3XYG1b6hGx-i/view">Danh sách HS các lớp</a></p>
+  <p class="text-center py-2">Các em xem bảng điểm chi tiết từng cột ở đây nhé:</p>
+  <p class="text-center pb-2"> <a class="btn btn-success" href="https://c3tcvan-my.sharepoint.com/:x:/g/personal/lhchan_tcvan_edu_vn/EYeUjyUcPbJEjYNxFVA5TY4B2yRULrrjyhHx1ErKXYpyog?e=I19Aqx">Bảng điểm chi tiết</a></p>
   <div class="row" id="linksContainer">
     <div class="col-lg-6">
       <div class="card text-dark bg-light">
