sửa lỗi chính tảtả

--- a/kt/tin.html
+++ b/kt/tin.html
@@ -41,7 +41,7 @@ script: |
   <p class="text-center py-2">Các em xem bảng điểm chi tiết từng cột ở đây nhé:</p>
   <p class="text-center pb-2"> <a class="btn btn-success" href="https://c3tcvan-my.sharepoint.com/:x:/g/personal/lhchan_tcvan_edu_vn/EYeUjyUcPbJEjYNxFVA5TY4B2yRULrrjyhHx1ErKXYpyog?e=I19Aqx">Bảng điểm chi tiết</a></p>
   <p class="text-center py-2">Đáp án và giải thích đề kiểm tra giữa kỳ môn tin học 11:</p>
-  <p class="text-center pb-2"> <a class="btn btn-primary" href="https://c3tcvan-my.sharepoint.com/:w:/g/personal/lhchan_tcvan_edu_vn/EcrPDa1J6-tFmVE5W2nFbOwBwPTPhCxR4YIVMYQxvFY8CA?e=y10lmL">Đáp án và giải thích KT GKIGKI</a></p>
+  <p class="text-center pb-2"> <a class="btn btn-primary" href="https://c3tcvan-my.sharepoint.com/:w:/g/personal/lhchan_tcvan_edu_vn/EcrPDa1J6-tFmVE5W2nFbOwBwPTPhCxR4YIVMYQxvFY8CA?e=y10lmL">Đáp án và giải thích KT GKI</a></p>
   <div class="row" id="linksContainer">
     <div class="col-lg-6">
       <div class="card text-dark bg-light">
