Cập nhật link bảng điểmđiểm

--- a/kt/tin.html
+++ b/kt/tin.html
@@ -39,7 +39,7 @@ script: |
   <p class="text-center py-2">Các em xem mã số học sinh của mình trên thẻ HS hoặc ở đây nhé:</p>
   <p class="text-center pb-2"> <a class="btn btn-danger" href="https://drive.google.com/file/d/19pAdYylCUXnQkhtwvbKG3XYG1b6hGx-i/view">Danh sách HS các lớp</a></p>
   <p class="text-center py-2">Các em xem bảng điểm chi tiết từng cột ở đây nhé:</p>
-  <p class="text-center pb-2"> <a class="btn btn-success" href="https://c3tcvan-my.sharepoint.com/:x:/g/personal/lhchan_tcvan_edu_vn/Edu3r7cbULZIl4BPS8d1IDoBpEuI4jNjLkb1R7XpjRW6MA?e=ptCs0e">Bảng điểm chi tiết</a></p>
+  <p class="text-center pb-2"> <a class="btn btn-success" href="https://c3tcvan-my.sharepoint.com/:x:/g/personal/lhchan_tcvan_edu_vn/EW4bHiYmFCJBpR0dBjlln4oBaa2hMPal199emfTF6jiuOA?e=PxEWMI">Bảng điểm chi tiết</a></p>
   <p class="text-center py-2">Đáp án và giải thích đề kiểm tra giữa kỳ môn tin học 11:</p>
   <p class="text-center pb-2"> <a class="btn btn-primary" href="https://c3tcvan-my.sharepoint.com/:w:/g/personal/lhchan_tcvan_edu_vn/EcrPDa1J6-tFmVE5W2nFbOwBwPTPhCxR4YIVMYQxvFY8CA?e=y10lmL">Đáp án và giải thích KT GKI</a></p>
   <div class="row" id="linksContainer">
