Công bố đáp án KT 11 lần 4

--- a/kt/tin.html
+++ b/kt/tin.html
@@ -180,6 +180,7 @@ script: |
                 name = "Kiểm tra lần 4 - ARRAY" 
                 badge = "Tháng 01"
                 link = "DXyc3CXGnUGdd0vUJ4tdGek1XC3to9JMhpfKl3AEZphUMjA5QjBNUzE3SUtaR0VBQVZPRU9TTTNWTC4u"
+                ans = "files/11/OL4.png"
               %}
               {% include item_kt.html  
                 style = "danger" 
