Thêm đáp án tin 12 lần 5

--- a/kt/tin.html
+++ b/kt/tin.html
@@ -98,6 +98,7 @@ script: |
                 name = "Kiểm tra lần 5 - CSDLQH Lý thuyết" 
                 badge = "Tháng 01"
                 link = "DXyc3CXGnUGdd0vUJ4tdGek1XC3to9JMhpfKl3AEZphUNDFTNlhCUkw4QVpYMzhQU01QMk1ESFRVRC4u"
+                ans = "files/12/OL5.png"
               %}
               {% include item_kt.html  
                 style = "danger" 
