--- a/kt/tin.html
+++ b/kt/tin.html
@@ -35,16 +35,16 @@ script: |
 </div>
 
 <div class="container" id="container">
-  <h2 class="text-center">Links kiểm tra hệ số 1 các lớp của thầy Hoàn Chân</h2>
+  <h2 class="text-center">Links kiểm tra thường xuyên các lớp của thầy Hoàn Chân</h2>
   <div class="row">
     <div class="col-lg-4 py-1 px-3">
       <a class="btn btn-block btn-danger" href="https://drive.google.com/file/d/19pAdYylCUXnQkhtwvbKG3XYG1b6hGx-i/view">Danh sách MSHS các lớp</a>
     </div>
     <div class="col-lg-4 py-1 px-3">
-      <a class="btn btn-block btn-success" href="https://www.dropbox.com/s/vprc3ib68pkag4g/B%E1%BA%A3ng%20%C4%91i%E1%BB%83m%20chi%20ti%E1%BA%BFt.xlsx?dl=0">Bảng điểm chi tiết</a>
+      <a class="btn btn-block btn-success" href="https://www.dropbox.com/s/vprc3ib68pkag4g/B%E1%BA%A3ng%20%C4%91i%E1%BB%83m%20chi%20ti%E1%BA%BFt.xlsx?dl=0">Bảng điểm chi tiết HKI</a>
     </div>
     <div class="col-lg-4 py-1 px-3">
-      <a class="btn btn-block btn-primary" href="https://c3tcvan-my.sharepoint.com/:w:/g/personal/lhchan_tcvan_edu_vn/EcrPDa1J6-tFmVE5W2nFbOwBwPTPhCxR4YIVMYQxvFY8CA?e=y10lmL">Đáp án và giải thích KT GKI Tin 11</a>
+      <a class="btn btn-block btn-primary" href="https://www.dropbox.com/s/1yrvfypb2szxmnn/B%E1%BA%A3ng%20%C4%91i%E1%BB%83m%20chi%20ti%E1%BA%BFt%20HKII.xlsx?dl=0">Bảng điểm chi tiết HKII</a>
     </div>
   </div>
   <div class="row" id="linksContainer">
