Cập nhật đáp án và link KT

--- a/kt/tin.html
+++ b/kt/tin.html
@@ -105,12 +105,19 @@ script: |
                 name = "Kiểm tra lần 6 - CSDLQH Thực hành" 
                 badge = "Tháng 02"
                 link = "DXyc3CXGnUGdd0vUJ4tdGek1XC3to9JMhpfKl3AEZphUN1RPRTJSMEE4WkowREhMNURTMDdBNUJISi4u"
+                ans = "files/12/OL6.png"
               %}
               {% include item_kt.html  
                 style = "success" 
-                name = "Kiểm tra lần 7 - Bảo mật thông tin" 
+                name = "Kiểm tra lần 7 - Các thao tác trên CSDLQH" 
                 badge = "Tháng 03"
                 link = "DXyc3CXGnUGdd0vUJ4tdGek1XC3to9JMhpfKl3AEZphUOEY3UlJZNVZSWTlJMVNOSjQ1V01BRUVUTC4u"
+              %}
+              {% include item_kt.html
+                style = "info"
+                name = "Kiểm tra lần 8 - Bảo mật thông tin"
+                badge = "Tháng 04"
+                link = "xxxxxx"
               %}
               {% include item_kt.html  
                 style = "white" 
@@ -188,6 +195,7 @@ script: |
                 name = "Kiểm tra lần 5 - STRING" 
                 badge = "Tháng 02"
                 link = "DXyc3CXGnUGdd0vUJ4tdGek1XC3to9JMhpfKl3AEZphUOTFERU5GVUkxVzFMQ0ZKVlFYRDlNSTEwQy4u"
+                ans = "files/11/OL5.png"
               %}
               {% include item_kt.html  
                 style = "success" 
