Cập nhật KQ kiểm tra giữa kỳ 2

--- a/kt/tin.html
+++ b/kt/tin.html
@@ -124,6 +124,8 @@ script: |
                 name = "Đề cương chi tiết ôn tập chuẩn bị kiểm tra giữa kỳ." 
                 ans = "files/12/on tap GK2.pdf"
                 ansName = "Đề cương trắc nghiệm"
+                score = "https://www.dropbox.com/sh/ck5qq96g1jc8url/AAC8IkbpgxEShfnsz-PIfyJCa?dl=0"
+                scoreName = "Kết quả kiểm tra"
               %}
               {% include item_kt.html  
                 style = "white" 
@@ -220,6 +222,8 @@ script: |
                 name = "Đề cương chi tiết ôn tập chuẩn bị kiểm tra giữa kỳ." 
                 ans = "files/11/on tap GK2.pdf"
                 ansName = "Đề cương trắc nghiệm"
+                score = "https://www.dropbox.com/sh/l92blu6jdl2awbt/AADcm9ozzEGUS_-4fXzfiZhGa?dl=0"
+                scoreName = "Kết quả kiểm tra"
               %}
               {% include item_kt.html  
                 style = "white" 
