--- a/kt/tin.html
+++ b/kt/tin.html
@@ -98,14 +98,14 @@ script: |
                 name = "Kiểm tra lần 5 - CSDLQH Lý thuyết" 
                 badge = "Tháng 01"
                 link = "DXyc3CXGnUGdd0vUJ4tdGek1XC3to9JMhpfKl3AEZphUNDFTNlhCUkw4QVpYMzhQU01QMk1ESFRVRC4u"
-                ans = "files/12/OL5.png"
+                {%- comment -%} ans = "files/12/OL5.png" {%- endcomment -%}
               %}
               {% include item_kt.html  
                 style = "danger" 
                 name = "Kiểm tra lần 6 - CSDLQH Thực hành" 
                 badge = "Tháng 02"
                 link = "DXyc3CXGnUGdd0vUJ4tdGek1XC3to9JMhpfKl3AEZphUN1RPRTJSMEE4WkowREhMNURTMDdBNUJISi4u"
-                ans = "files/12/OL6.png"
+                {%- comment -%} ans = "files/12/OL6.png" {%- endcomment -%}
               %}
               {% include item_kt.html  
                 style = "success" 
@@ -158,21 +158,21 @@ script: |
                 name = "Kiểm tra lần 1 - Khái niệm + Biểu thức" 
                 badge = "Tháng 10"
                 link = "DXyc3CXGnUGdd0vUJ4tdGek1XC3to9JMhpfKl3AEZphURUdGV09WV09PQVUzUkw1REdMQUZSRjVTUi4u"
-                ans = "files/11/OL1.png"
+                {%- comment -%} ans = "files/11/OL1.png" {%- endcomment -%}
               %}
               {% include item_kt.html  
                 style = "danger" 
                 name = "Kiểm tra lần 2 - IF" 
                 badge = "Tháng 11"
                 link = "DXyc3CXGnUGdd0vUJ4tdGek1XC3to9JMhpfKl3AEZphUMDNBTjdFWDMzWjJXTDJLNEhZMlA5TzdOOC4u"
-                ans = "files/11/OL2.png"
+                {%- comment -%} ans = "files/11/OL2.png" {%- endcomment -%}
               %}
               {% include item_kt.html  
                 style = "success" 
                 name = "Kiểm tra lần 3 - FOR + WHILE" 
                 badge = "Tháng 12"
                 link = "DXyc3CXGnUGdd0vUJ4tdGek1XC3to9JMhpfKl3AEZphUQ0JWVjJESzFDVzhCVFZCWEMwQlA4V1MzMy4u"
-                ans = "files/11/OL3.png"
+                {%- comment -%} ans = "files/11/OL3.png" {%- endcomment -%}
               %}
               {% include item_kt.html  
                 style = "white" 
@@ -196,14 +196,14 @@ script: |
                 name = "Kiểm tra lần 4 - ARRAY" 
                 badge = "Tháng 01"
                 link = "DXyc3CXGnUGdd0vUJ4tdGek1XC3to9JMhpfKl3AEZphUMjA5QjBNUzE3SUtaR0VBQVZPRU9TTTNWTC4u"
-                ans = "files/11/OL4.png"
+                {%- comment -%} ans = "files/11/OL4.png" {%- endcomment -%}
               %}
               {% include item_kt.html  
                 style = "danger" 
                 name = "Kiểm tra lần 5 - STRING" 
                 badge = "Tháng 02"
                 link = "DXyc3CXGnUGdd0vUJ4tdGek1XC3to9JMhpfKl3AEZphUOTFERU5GVUkxVzFMQ0ZKVlFYRDlNSTEwQy4u"
-                ans = "files/11/OL5.png"
+                {%- comment -%} ans = "files/11/OL5.png" {%- endcomment -%}
               %}
               {% include item_kt.html  
                 style = "success" 
