--- a/thi/index.html
+++ b/thi/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Cuộc thi tìm hiểu Đoàn thanh niên Cộng sản Hồ Chí Minh
+title: Các cuộc thi trực tuyến của trường THPT Trần Cao Vân
 css: |
   <style>
     .btn-block{
@@ -16,7 +16,7 @@ css: |
 
 <div class="container" id="container">
   <h1 class="pt-4 text-center">Danh sách các cuộc thi trực tuyến của<br />trường THPT Trần Cao Vân</h1>
-  <p class="text-center pb-2"> <a class="btn btn-danger btn-block align-middle" href="dtn.html">Tìm hiểu lịch sử<br />Đoàn thanh niên Cộng sản Hồ Chí Minh</a</a></p>
+  <p class="text-center pb-2"> <a class="btn btn-success btn-block align-middle" href="dtn.html">Tìm hiểu lịch sử<br />Đoàn thanh niên Cộng sản Hồ Chí Minh</a></p>
   <p class="text-center pb-2"> <a class="btn btn-primary btn-block align-middle" href="lsdang.html">Tìm hiểu lịch sử<br />Đảng Cộng sản Việt Nam</a></p>
   <p class="text-center pb-2"> <a class="btn btn-danger btn-block align-middle" href="atgt.html">Tìm hiểu an toàn giao thông</a></p>
 </div>
