Bổ sung link kiểm tra lần 8 tin 12

--- a/kt/tin.html
+++ b/kt/tin.html
@@ -115,7 +115,7 @@ script: |
                 style = "info"
                 name = "Kiểm tra lần 8 - Bảo mật thông tin"
                 badge = "Tháng 04"
-                link = "xxxxxx"
+                link = "DXyc3CXGnUGdd0vUJ4tdGek1XC3to9JMhpfKl3AEZphUNDFUSEJaNDRLVkdJRlZNN1hJOFo5UjRQOS4u"
               %}              
               {% include item_kt.html  
                 style = "white" 
@@ -128,10 +128,10 @@ script: |
               {% include item_kt.html  
                 style = "white" 
                 name = "Đề cương chi tiết ôn tập chuẩn bị kiểm tra cuối kỳ." 
-                ans = "files/12/de cuong CKII.pdf"
+                ans = "files/12/on tap CK2.pdf"
                 ansName = "Đề cương trắc nghiệm"
-                score = "files/12/on tap CKII.pdf"
-                scoreName = "Đề cương lý thuyết"
+                score = "xxxxx"
+                scoreName = "Kết quả kiểm tra"
               %}
             </ul>
           </div>
