Bổ sung đề cương

--- a/kt/tin.html
+++ b/kt/tin.html
@@ -130,8 +130,8 @@ script: |
                 name = "Đề cương chi tiết ôn tập chuẩn bị kiểm tra cuối kỳ." 
                 ans = "files/12/on tap CK2.pdf"
                 ansName = "Đề cương trắc nghiệm"
-                score = "xxxxx"
-                scoreName = "Kết quả kiểm tra"
+                score = "files/12/on tap HK2.pdf"
+                scoreName = "Đề cương trắc nghiệm 2"
               %}
             </ul>
           </div>
