Bổ sung đề cương 11

--- a/kt/tin.html
+++ b/kt/tin.html
@@ -221,10 +221,10 @@ script: |
               {% include item_kt.html  
                 style = "white" 
                 name = "Đề cương chi tiết ôn tập chuẩn bị kiểm tra cuối kỳ." 
-                ans = "files/11/de cuong CKII.pdf"
-                ansName = "Đề cương trắc nghiệm"
-                score = "files/11/on tap CKII.pdf"
-                scoreName = "Đề cương lý thuyết"
+                ans = "files/11/de cuong CK2.pdf"
+                ansName = "Đề cương ký thuyết"
+                score = "files/11/on tap CK2.pdf"
+                scoreName = "Đề cương trắc nghiệm"
               %}
             </ul>
           </div>
