Cập nhật KQ kiểm tra K12

--- a/kt/tin.html
+++ b/kt/tin.html
@@ -128,10 +128,10 @@ script: |
               {% include item_kt.html  
                 style = "white" 
                 name = "Đề cương chi tiết ôn tập chuẩn bị kiểm tra cuối kỳ." 
-                ans = "files/12/on tap CK2.pdf"
+                ans = "files/12/on tap HK2.pdf"
                 ansName = "Đề cương trắc nghiệm"
-                score = "files/12/on tap HK2.pdf"
-                scoreName = "Đề cương trắc nghiệm 2"
+                score = "https://www.dropbox.com/s/2xg3fydl9yasd6o/KQ%20CK2.pdf?dl=0"
+                scoreName = "Kết quả kiểm tra"
               %}
             </ul>
           </div>
