Cập nhật KQ kiểm tra tin 11

--- a/kt/tin.html
+++ b/kt/tin.html
@@ -223,8 +223,8 @@ script: |
                 name = "Đề cương chi tiết ôn tập chuẩn bị kiểm tra cuối kỳ." 
                 ans = "files/11/de cuong CK2.pdf"
                 ansName = "Đề cương ký thuyết"
-                score = "files/11/on tap CK2.pdf"
-                scoreName = "Đề cương trắc nghiệm"
+                score = "https://www.dropbox.com/sh/1y5c94kf3t3labw/AADhTDyrilmabOkIBJSq-XRca?dl=0"
+                scoreName = "Kết quả kiểm tra"
               %}
             </ul>
           </div>
